// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button isWaiting state matches snapshot 1`] = `
<button
  className="sc-bczRLJ dOOknK"
  disabled={true}
>
  Submitting...
</button>
`;

exports[`Button matches light color snapshot 1`] = `
<button
  className="sc-bczRLJ esoxNv"
>
  Click Me
</button>
`;

exports[`Button matches snapshot 1`] = `
<button
  className="sc-bczRLJ dOOknK"
>
  Click Me
</button>
`;

exports[`Button renders as a tag 1`] = `
<a
  className="sc-gsnTZi bOGeQ"
>
  Click Me
</a>
`;

exports[`Button renders as a tag variant 1`] = `
<a
  className="sc-gsnTZi gaKcuZ"
>
  Click Me
</a>
`;

exports[`Button renders button that looks like a link 1`] = `
<button
  className="sc-dkzDqf sc-hKMtZM bLbJrC bAtAjm"
>
  Click Me
</button>
`;

exports[`Button renders plain button 1`] = `
<button
  className="sc-dkzDqf bLbJrC"
>
  Click Me
</button>
`;
